src/cimgui_ext/include/cimplot.h

typedef int (*ImPlotFormatter)(double value, char* buff, int size, void* user_data);
typedef double (*ImPlotTransform)(double value, void* user_data);
typedef int ImAxis;
typedef int ImPlotAxisFlags;
typedef int ImPlotColormap;
typedef int ImPlotCond;
typedef int ImPlotLegendFlags;
typedef int ImPlotLocation;
typedef int ImPlotMouseTextFlags;
typedef int ImPlotScale;
enum ImPlotCol_
{
    ImPlotCol_FrameBg = 0,
    ImPlotCol_PlotBg = 1,
    ImPlotCol_PlotBorder = 2,
    ImPlotCol_LegendBg = 3,
    ImPlotCol_LegendBorder = 4,
    ImPlotCol_LegendText = 5,
    ImPlotCol_TitleText = 6,
    ImPlotCol_InlayText = 7,
    ImPlotCol_AxisText = 8,
    ImPlotCol_AxisGrid = 9,
    ImPlotCol_AxisTick = 10,
    ImPlotCol_AxisBg = 11,
    ImPlotCol_AxisBgHovered = 12,
    ImPlotCol_AxisBgActive = 13,
    ImPlotCol_Selection = 14,
    ImPlotCol_Crosshairs = 15,
    ImPlotCol_COUNT = 16,
};
struct ImPlotStyle
{
    ImVec2 PlotDefaultSize;
    ImVec2 PlotMinSize;
    float PlotBorderSize;
    float MinorAlpha;
    ImVec2 MajorTickLen;
    ImVec2 MinorTickLen;
    ImVec2 MajorTickSize;
    ImVec2 MinorTickSize;
    ImVec2 MajorGridSize;
    ImVec2 MinorGridSize;
    ImVec2 PlotPadding;
    ImVec2 LabelPadding;
    ImVec2 LegendPadding;
    ImVec2 LegendInnerPadding;
    ImVec2 LegendSpacing;
    ImVec2 MousePosPadding;
    ImVec2 AnnotationPadding;
    ImVec2 FitPadding;
    float DigitalPadding;
    float DigitalSpacing;
    ImVec4 Colors[ImPlotCol_COUNT];
    ImPlotColormap Colormap;
    bool UseLocalTime;
    bool UseISO8601;
    bool Use24HourClock;
};
typedef struct ImPlotStyle ImPlotStyle;
CIMGUI_API void ImPlot_SetupAxis(ImAxis axis,const char* label,ImPlotAxisFlags flags);
CIMGUI_API void ImPlot_SetupAxisFormat_Str(ImAxis axis,const char* fmt);
CIMGUI_API void ImPlot_SetupAxisFormat_PlotFormatter(ImAxis axis,ImPlotFormatter formatter,void* data);
CIMGUI_API void ImPlot_SetupAxisLimits(ImAxis axis,double v_min,double v_max,ImPlotCond cond);
CIMGUI_API void ImPlot_SetupAxisLimitsConstraints(ImAxis axis,double v_min,double v_max);
CIMGUI_API void ImPlot_SetupAxisLinks(ImAxis axis,double* link_min,double* link_max);
CIMGUI_API void ImPlot_SetupAxisScale_PlotScale(ImAxis axis,ImPlotScale scale);
CIMGUI_API void ImPlot_SetupAxisScale_PlotTransform(ImAxis axis,ImPlotTransform forward,ImPlotTransform inverse,void* data);
CIMGUI_API void ImPlot_SetupAxisTicks_doublePtr(ImAxis axis,const double* values,int n_ticks,const char* const labels[],bool keep_default);
CIMGUI_API void ImPlot_SetupAxisTicks_double(ImAxis axis,double v_min,double v_max,int n_ticks,const char* const labels[],bool keep_default);
CIMGUI_API void ImPlot_SetupAxisZoomConstraints(ImAxis axis,double z_min,double z_max);
CIMGUI_API void ImPlot_SetupFinish();
CIMGUI_API void ImPlot_SetupLegend(ImPlotLocation location,ImPlotLegendFlags flags);
CIMGUI_API void ImPlot_SetupMouseText(ImPlotLocation location,ImPlotMouseTextFlags flags);
CIMGUI_API bool ImPlot_ShowColormapSelector(const char* label);
CIMGUI_API void ImPlot_ShowDemoWindow(bool* p_open);
CIMGUI_API bool ImPlot_ShowInputMapSelector(const char* label);
CIMGUI_API void ImPlot_ShowMetricsWindow(bool* p_popen);
CIMGUI_API void ImPlot_ShowStyleEditor(ImPlotStyle* ref);
CIMGUI_API bool ImPlot_ShowStyleSelector(const char* label);
CIMGUI_API void ImPlot_ShowUserGuide();
CIMGUI_API void ImPlot_StyleColorsAuto(ImPlotStyle* dst);
CIMGUI_API void ImPlot_StyleColorsClassic(ImPlotStyle* dst);
CIMGUI_API void ImPlot_StyleColorsDark(ImPlotStyle* dst);
CIMGUI_API void ImPlot_StyleColorsLight(ImPlotStyle* dst);
CIMGUI_API void ImPlot_TagX_Bool(double x,ImVec4 col,bool round);
CIMGUI_API void ImPlot_TagY_Bool(double y,ImVec4 col,bool round);