src/Editor/LibreLancer.ImUI/ImPlot/ImPlotNative.cs


    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxis(ImAxis axis,byte* label,ImPlotAxisFlags flags);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisFormat_Str(ImAxis axis,byte* fmt);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisFormat_PlotFormatter(ImAxis axis,delegate* unmanaged<double, IntPtr, int, void*, int> formatter,void* data);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisLimits(ImAxis axis,double v_min,double v_max,ImPlotCond cond);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisLimitsConstraints(ImAxis axis,double v_min,double v_max);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisLinks(ImAxis axis,double* link_min,double* link_max);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisScale_PlotScale(ImAxis axis,ImPlotScale scale);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisScale_PlotTransform(ImAxis axis,delegate* unmanaged<double, void*, double> forward,delegate* unmanaged<double, void*, double> inverse,void* data);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisTicks_doublePtr(ImAxis axis,double* values,int n_ticks,IntPtr labels,byte keep_default);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisTicks_double(ImAxis axis,double v_min,double v_max,int n_ticks,IntPtr labels,byte keep_default);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxisZoomConstraints(ImAxis axis,double z_min,double z_max);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupFinish();

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupLegend(ImPlotLocation location,ImPlotLegendFlags flags);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupMouseText(ImPlotLocation location,ImPlotMouseTextFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImPlot_ShowColormapSelector(byte* label);

    [DllImport("cimgui")]
    public static extern void ImPlot_ShowDemoWindow(byte* p_open);

    [DllImport("cimgui")]
    public static extern byte ImPlot_ShowInputMapSelector(byte* label);

    [DllImport("cimgui")]
    public static extern void ImPlot_ShowMetricsWindow(byte* p_popen);

    [DllImport("cimgui")]
    public static extern void ImPlot_ShowStyleEditor(ImPlotStyle* reference);

    [DllImport("cimgui")]
    public static extern byte ImPlot_ShowStyleSelector(byte* label);

    [DllImport("cimgui")]
    public static extern void ImPlot_ShowUserGuide();

    [DllImport("cimgui")]
    public static extern void ImPlot_StyleColorsAuto(ImPlotStyle* dst);

    [DllImport("cimgui")]
    public static extern void ImPlot_StyleColorsClassic(ImPlotStyle* dst);

    [DllImport("cimgui")]
    public static extern void ImPlot_StyleColorsDark(ImPlotStyle* dst);

    [DllImport("cimgui")]
    public static extern void ImPlot_StyleColorsLight(ImPlotStyle* dst);

    [DllImport("cimgui")]
    public static extern void ImPlot_TagX_Bool(double x,Vector4 col,byte round);

    [DllImport("cimgui")]
    public static extern void ImPlot_TagY_Bool(double y,Vector4 col,byte round);

}
